BUG2224 [P] Fix spacing between items and right edge
(cherry picked from commit 5dcbbe29d187df60cfff72f17e93d495c986d563)

--- a/src/client/src/Feature/Catalog/ProductShop/styles.scss
+++ b/src/client/src/Feature/Catalog/ProductShop/styles.scss
@@ -1,18 +1,18 @@
 //    Copyright 2020 EPAM Systems, Inc.
-// 
+//
 //    Licensed under the Apache License, Version 2.0 (the "License");
 //    you may not use this file except in compliance with the License.
 //    You may obtain a copy of the License at
-// 
+//
 //      http://www.apache.org/licenses/LICENSE-2.0
-// 
+//
 //    Unless required by applicable law or agreed to in writing, software
 //    distributed under the License is distributed on an "AS IS" BASIS,
 //    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 //    See the License for the specific language governing permissions and
 //    limitations under the License.
 
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/mixins';
 @import 'Foundation/UI/common/scss/variables.scss';
 @import 'Foundation/UI/common/scss/mixins';
 
@@ -61,19 +61,19 @@
           animation: object_three 1.5s infinite;
           animation-delay: 0.5s;
         }
-        
+
         @keyframes object_one {
           75% {
             transform: scale(0);
           }
         }
-        
+
         @keyframes object_two {
           75% {
             transform: scale(0);
           }
         }
-        
+
         @keyframes object_three {
           75% {
             transform: scale(0);
@@ -92,7 +92,7 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    &_hidden{
+    &_hidden {
       display: none !important;
     }
     .btn-load-more {
@@ -117,4 +117,8 @@
       }
     }
   }
+}
+
+.container.wooli {
+  width: 100%;
 }
